--- a/dwitter/templates/dwitter/register.html
+++ b/dwitter/templates/dwitter/register.html
@@ -7,5 +7,13 @@
   {{form}}
   <input type="submit" value="Register">
 </form>
-<a href="{% url 'dwitter:login' %}">Back to login</a>
+<div class="column is-one-third">
+  <div class="block">
+  <a href="{% url 'dwitter:login' %} ">
+  <button class="button is-dark is-outlined ">
+  Back to login
+  </button>
+  </a>
+  </div>
+</div>
 {% endblock %}
